--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -15,8 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  clean:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,20 +18,39 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-
+        
     - name: Cleaning Project
       run: mvn clean
 
+  build:
+    runs-on: ubuntu-latest
+    needs: clean  # This ensures that the build job runs after the clean job
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+        
     - name: Validating Project
       run: mvn validate
-
-    - name: Testing Project
-      run: mvn test
-
+      
     - name: Compiling Project
       run: mvn compile
-
-    - name: Building Artifact
-      run: mvn package
-
       
+    - name: Testing Project
+      run: mvn test
+      
+    - name: Packaging Project
+      run: mvn package
+      
+    - name: Verifying Project
+      run: mvn verify
+      
+    - name: Installing Project
+      run: mvn install
+
+    
