--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Cleaning Project
       run: mvn clean
 
-  build:
+  validate:
     runs-on: ubuntu-latest
-    needs: clean  # This ensures that the build job runs after the clean job
+    needs: clean
 
     steps:
     - uses: actions/checkout@v4
@@ -37,20 +37,83 @@ jobs:
         
     - name: Validating Project
       run: mvn validate
+
+  compile:  
+    runs-on: ubuntu-latest
+    needs: clean
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
       
     - name: Compiling Project
       run: mvn compile
+
+  test:
+    runs-on: ubuntu-latest
+    needs: clean
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
       
-    - name: Testing Project
+    - name: Testing Project  
       run: mvn test
+    
+  package:
+    runs-on: ubuntu-latest
+    needs: clean
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4  
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
       
     - name: Packaging Project
       run: mvn package
-      
-    - name: Verifying Project
-      run: mvn verify
-      
+
+  verify:
+    runs-on: ubuntu-latest
+    needs: clean
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4  
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    
+    - name: Verifying Project  
+      run: mvn verify 
+  
+  install:
+    runs-on: ubuntu-latest
+    needs: clean
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4  
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+   
     - name: Installing Project
       run: mvn install
-
-    
